맵 마커기능 완성

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:usesCleartextTraffic="true"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:label="dooit">
@@ -30,6 +33,9 @@
             <meta-data
                 android:name="com.naver.sdk.clientName"
                 android:value="@string/client_name" />
+            <meta-data
+                android:name="com.kakao.sdk.AppKey"
+                android:value="b8f49d34a5c546840dc13c5053c57eab"/>
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
