--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.2.0
   url_launcher: ^6.3.1
+  webview_flutter: ^4.13.0
+  flutter_inappwebview: ^6.1.5
+  geolocator: ^14.0.1
 
 dev_dependencies:
   flutter_test:
